# mfte

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  KEYS.md  LICENSE  README.md
src/: config.rs  file.rs  indent.rs  keybinds.rs  main.rs  state.rs
src/terminal/: base.rs  mod.rs  unix.rs  win32.rs
